syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Messages.Schedules";
package SimpleSchedulerBlazorProtocolBuffers;

import "types.proto";
import "models.schedule.proto";

message CreateScheduleRequest {
    sint64 WorkerID = 1;
    bool Sunday = 2;
    bool Monday = 3;
    bool Tuesday = 4;
    bool Wednesday = 5;
    bool Thursday = 6;
    bool Friday = 7;
    bool Saturday = 8;
    NullableTimeSpan TimeOfDayUTC = 9;
    NullableTimeSpan RecurTime = 10;
    NullableTimeSpan RecurBetweenStartUTC = 11;
    NullableTimeSpan RecurBetweenEndUTC = 12;
}
message CreateScheduleReply {
}

message DeleteScheduleRequest {
    sint64 ID = 1;
}
message DeleteScheduleReply {
}

message GetAllSchedulesRequest {
}
message GetAllSchedulesReply {
    repeated ScheduleMessage Schedules = 1;
}

message GetScheduleRequest {
    sint64 ID = 1;
}
message GetScheduleReply {
    ScheduleMessage Schedule = 1;
}

message ReactivateScheduleRequest {
    sint64 ID = 1;
}
message ReactivateScheduleReply {
}

message UpdateScheduleRequest {
    sint64 ID = 1;
    bool Sunday = 2;
    bool Monday = 3;
    bool Tuesday = 4;
    bool Wednesday = 5;
    bool Thursday = 6;
    bool Friday = 7;
    bool Saturday = 8;
    NullableTimeSpan TimeOfDayUTC = 9;
    NullableTimeSpan RecurTime = 10;
    NullableTimeSpan RecurBetweenStartUTC = 11;
    NullableTimeSpan RecurBetweenEndUTC = 12;
}
message UpdateScheduleReply {
}
